--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@ h2 {
 }
 
 label {
-    font-weight: bold;
     display: block;
     margin-top: 10px;
 }
@@ -41,15 +40,19 @@ label {
     font-size: 0.9em;
     padding: 0;
     cursor: pointer;
+}
+
+#reset-selections-top {
     text-align: right;
 }
 
-#reset-selections {
+#reset-selections-bottom {
     margin-top: 15px;
     width: 100%;
+    text-align: right;
 }
 
-.title-container #reset-selections {
+.title-container #reset-selections-top {
     margin-top: 0;
     width: auto;
 }
@@ -58,6 +61,7 @@ input[type="text"], textarea, select {
     width: 100%;
     padding: 5px;
     margin-top: 5px;
+    border: 1px solid lightgray;
 }
 
 button {
